Weiter Bearbeitung der AuftragBearbeiten Sicht

--- a/src/view/ArtikelAnlegen.form
+++ b/src/view/ArtikelAnlegen.form
@@ -119,12 +119,12 @@
                                                               <Component id="jLabel60" min="-2" max="-2" attributes="0"/>
                                                               <EmptySpace min="-2" pref="14" max="-2" attributes="0"/>
                                                               <Group type="103" groupAlignment="0" attributes="0">
-                                                                  <Group type="102" alignment="0" attributes="0">
+                                                                  <Group type="102" attributes="0">
                                                                       <Component id="jcbMwst_ArtikelAnlegen" min="-2" pref="60" max="-2" attributes="0"/>
                                                                       <EmptySpace max="-2" attributes="0"/>
                                                                       <Component id="jLabel58" min="-2" pref="14" max="-2" attributes="0"/>
                                                                   </Group>
-                                                                  <Component id="jtfbestellwertnetto_ArtikelAnlegen" alignment="0" min="-2" pref="150" max="-2" attributes="0"/>
+                                                                  <Component id="jtfbestellwertnetto_ArtikelAnlegen" min="-2" pref="150" max="-2" attributes="0"/>
                                                               </Group>
                                                               <EmptySpace max="-2" attributes="0"/>
                                                               <Component id="jLabel171" min="-2" max="-2" attributes="0"/>
