--- a/src/view/AuftragAnlegen.form
+++ b/src/view/AuftragAnlegen.form
@@ -28,7 +28,7 @@
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="AuftragAnlegen" alignment="0" pref="826" max="32767" attributes="0"/>
+          <Component id="AuftragAnlegen" alignment="0" pref="830" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
   </Layout>
@@ -366,8 +366,8 @@
                               <Component id="jScrollPane8" min="-2" pref="779" max="-2" attributes="0"/>
                               <EmptySpace type="unrelated" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="jbMinus_AuftragAnlegen" alignment="0" min="-2" max="-2" attributes="0"/>
-                                  <Component id="jbPlus_AuftragAnlegen" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="jbMinus_AuftragAnlegen" alignment="0" min="-2" pref="40" max="-2" attributes="0"/>
+                                  <Component id="jbPlus_AuftragAnlegen" alignment="0" min="-2" pref="40" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace max="32767" attributes="0"/>
                           </Group>
@@ -417,7 +417,7 @@
                       <Group type="103" groupAlignment="1" attributes="0">
                           <Group type="102" alignment="1" attributes="0">
                               <Component id="jbPlus_AuftragAnlegen" min="-2" pref="35" max="-2" attributes="0"/>
-                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                              <EmptySpace max="-2" attributes="0"/>
                               <Component id="jbMinus_AuftragAnlegen" min="-2" pref="35" max="-2" attributes="0"/>
                           </Group>
                           <Group type="102" alignment="1" attributes="0">
@@ -453,7 +453,7 @@
                                       <EmptySpace type="separate" max="-2" attributes="0"/>
                                       <Component id="jtfGesamtwert_AuftragAnlegen" min="-2" pref="25" max="-2" attributes="0"/>
                                   </Group>
-                                  <Component id="jbLupe_AuftragAnlegen" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="jbLupe_AuftragAnlegen" alignment="0" min="-2" pref="25" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
                               <Component id="jScrollPane8" min="-2" pref="173" max="-2" attributes="0"/>
